did mobile screen layout for query 2

--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -2,16 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- Added the viewport and content part below
+    or the HTML won't switch between PC
+    and mobile screen sizes. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Media Queries 2</title>
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
-    <div class="container">
+  <body> 
+    <!-- Added aria-hidden to hide the container -->
+    <div class="container" aria-hidden="true">
       <div class="a">a</div>
       <div class="b">b</div>
-      <div class="c">c</div>
-      <div class="d">d</div>
-      <div class="e">e</div>
+      <div class="section">
+        <div class="c">c</div>
+        <div class="d">d</div>
+        <div class="e">e</div>
+      </div>
+
       <div class="f">f</div>
     </div>
   </body>
