did mobile layout for query 3

--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -15,7 +15,10 @@
     <div class="container" aria-hidden="true">
       <div class="a">a</div>
       <div class="b">b</div>
-      <div class="section">
+      <!-- Grouped CDE into a section so they can be
+      moved all together and set onto a new line
+      in the PC screen version. -->
+      <div class="section" id="break">
         <div class="c">c</div>
         <div class="d">d</div>
         <div class="e">e</div>
@@ -23,5 +26,7 @@
 
       <div class="f">f</div>
     </div>
+
+    
   </body>
 </html>
