--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -8,9 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Media Queries 1</title>
-    <link rel="stylesheet" href="main.css">
+    <!-- added type for good practice -->
+    <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
+    <!-- added aria-hidden to hide the container for accessibility -->
     <div class="container" aria-hidden="true">
       <div class="a">
         <h2>a</h2>
